gcc/testsuite/rust/rustc/ui/pattern/pattern-ident-path-generics.rs
fn main() {
    match Some("foo") {
        None::<isize> => {}   // { dg-error ".E0308." "" { target *-*-* } }
        Some(_) => {}
    }
}

